--- a/src/css/placeholders.css
+++ b/src/css/placeholders.css
@@ -3,6 +3,8 @@
   --color-button: #1F1D1D;
   --color-base: #000080;
   --color-red: #DF2C21;
+  --color-blue: #80B9CD;
+  --color-light-blue: #E3F2F8;
   --color-white: #FFFFFF;
   --color-green: #4DDC40;
   --color-footer: #232121;
@@ -11,14 +13,13 @@
   --font-16: 16px;
   --font-22: 22px;
   --font-26: 26px;
-}
+  --font-32: 32px;
+  --line-150: 150%; }
 
 .mb-16 {
-  margin-bottom: 16px;
-}
+  margin-bottom: 16px; }
 
 .mb-45 {
-  margin-bottom: 45px;
-}
+  margin-bottom: 45px; }
 
 /*# sourceMappingURL=placeholders.css.map */
