--- a/src/css/placeholders.scss
+++ b/src/css/placeholders.scss
@@ -5,6 +5,8 @@
     --color-button: #1F1D1D;
     --color-base: #000080;
     --color-red: #DF2C21;
+    --color-blue: #80B9CD;
+    --color-light-blue: #E3F2F8;
     --color-white: #FFFFFF;
     --color-green: #4DDC40;
     --color-footer: #232121;
@@ -14,6 +16,9 @@
     --font-16: 16px;
     --font-22: 22px;
     --font-26: 26px;
+    --font-32: 32px;
+    // Line heights
+    --line-150: 150%;
 }
 
 .mb-16 {
