--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -20,7 +20,7 @@
     // align-items: center;
 }
 
-.top__floating-wrapper {
+.top__floating-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,7 +32,7 @@
     // right: 0;
 }
 
-.top__car-photo-wrapper {
+.top__car-photo-container {
     display: none;
     // width: 500px;
     // margin-left: 50px;
@@ -44,19 +44,39 @@
     flex-direction: column;
 }
 
-.home-content__welcome-wrapper {
+.home-content__welcome-container {
     display: flex;
     flex-direction: column;
 }
 
-.welcome-wrapper {
+.welcome-container__general-info {
+    font-size: var(--font-32);
+    line-height: var(--line-150);
+}
+
+.welcome-container {
     display: flex;
     flex-direction: column;
+}
+
+.welcome-container__content {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-blue);
 }
 
 .home-content__mission-container {
     display: flex;
     flex-direction: column;
+}
+
+.mission-container__mission-photo {
+    width: 100%;
+}
+
+.mission-container__mission-content {
+    width: 100%;
+    background-color: var(--color-light-blue);
 }
 
 @media only screen and (min-width: 768px) {
@@ -67,7 +87,7 @@
 }
 
 @media only screen and (min-width: 1024px) {
-    .top__floating-wrapper {
+    .top__floating-container {
         position: absolute;
         top: 300px;
         flex-direction: row;
@@ -75,7 +95,7 @@
         width: 80%;
     }
 
-    .top__car-photo-wrapper {
+    .top__car-photo-container {
         display: block;
         width: 500px;
         // margin-left: 50px;
@@ -86,11 +106,29 @@
         padding-top: 80px;
     }
 
-    .welcome-wrapper {
+    .welcome-container {
+        width: 100%;
         flex-direction: row;
     }
 
+    .welcome-container__content {
+        width: 50%;
+    }
+
+    .welcome-container__map-container {
+        width: 50%;
+    }
+
     .home-content__mission-container {
+        width: 100%;
         flex-direction: row;
+    }
+
+    .mission-container__mission-photo {
+        width: 50%;
+    }
+
+    .mission-container__mission-content {
+        width: 50%;
     }
 }
