Work on content.

--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -44,13 +44,22 @@
     flex-direction: column;
 }
 
+.home-content__outside-welcome-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
 .home-content__welcome-container {
     display: flex;
     flex-direction: column;
 }
 
 .welcome-container__general-info {
-    font-size: var(--font-32);
+    padding: 16px;
+    font-size: var(--font-22);
     line-height: var(--line-150);
 }
 
@@ -65,6 +74,15 @@
     background-color: var(--color-blue);
 }
 
+.home-content__outside-mission-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: var(--color-light-blue);
+}
+
 .home-content__mission-container {
     display: flex;
     flex-direction: column;
@@ -76,7 +94,6 @@
 
 .mission-container__mission-content {
     width: 100%;
-    background-color: var(--color-light-blue);
 }
 
 @media only screen and (min-width: 768px) {
@@ -102,8 +119,17 @@
     }
 
     .home__home-content {
-        width: 80%;
-        padding-top: 80px;
+        // width: 80%;
+        // padding-top: 50px;
+    }
+
+    .home-content__welcome-container {
+        width: 85%;
+        padding: 80px;
+    }
+
+    .welcome-container__general-info {
+        font-size: var(--font-32);
     }
 
     .welcome-container {
@@ -120,7 +146,8 @@
     }
 
     .home-content__mission-container {
-        width: 100%;
+        width: 85%;
+        padding: 80px;
         flex-direction: row;
     }
 
