--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -30,12 +30,20 @@
   display: flex;
   flex-direction: column; }
 
+.home-content__outside-welcome-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%; }
+
 .home-content__welcome-container {
   display: flex;
   flex-direction: column; }
 
 .welcome-container__general-info {
-  font-size: var(--font-32);
+  padding: 16px;
+  font-size: var(--font-22);
   line-height: var(--line-150); }
 
 .welcome-container {
@@ -47,6 +55,14 @@
   flex-direction: column;
   background-color: var(--color-blue); }
 
+.home-content__outside-mission-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: var(--color-light-blue); }
+
 .home-content__mission-container {
   display: flex;
   flex-direction: column; }
@@ -55,8 +71,7 @@
   width: 100%; }
 
 .mission-container__mission-content {
-  width: 100%;
-  background-color: var(--color-light-blue); }
+  width: 100%; }
 
 @media only screen and (min-width: 768px) {
   .top {
@@ -74,9 +89,12 @@
     display: block;
     width: 500px; }
 
-  .home__home-content {
-    width: 80%;
-    padding-top: 80px; }
+  .home-content__welcome-container {
+    width: 85%;
+    padding: 80px; }
+
+  .welcome-container__general-info {
+    font-size: var(--font-32); }
 
   .welcome-container {
     width: 100%;
@@ -89,7 +107,8 @@
     width: 50%; }
 
   .home-content__mission-container {
-    width: 100%;
+    width: 85%;
+    padding: 80px;
     flex-direction: row; }
 
   .mission-container__mission-photo {
