--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -63,15 +63,37 @@
     line-height: var(--line-150);
 }
 
-.welcome-container {
+.welcome-content-container{
     display: flex;
     flex-direction: column;
 }
 
-.welcome-container__content {
+.welcome-content-container__content {
     display: flex;
     flex-direction: column;
     background-color: var(--color-blue);
+    padding: 40px;
+    font-size: var(--font-22);
+    line-height: var(--line-150);
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+}
+
+.welcome-content-container__header {
+    font-size: var(--font-44);
+    color: var(--color-white);
+}
+
+.welcome-content-container__wheel-chair-transfer-text {
+    margin-top: 40px;
+    font-size: var(--font-32);
+    line-height: var(--line-150);
+}
+
+.welcome-content-container__prices {
+    font-size: var(--font-32);
+    line-height: var(--line-150);
+    color: var(--color-white);
 }
 
 .home-content__outside-mission-container {
@@ -94,6 +116,12 @@
 
 .mission-container__mission-content {
     width: 100%;
+    padding: 16px;
+}
+
+.mission-content__text {
+    font-size: var(--font-22);
+    line-height: var(--line-150);
 }
 
 @media only screen and (min-width: 768px) {
@@ -132,16 +160,16 @@
         font-size: var(--font-32);
     }
 
-    .welcome-container {
+    .welcome-content-container {
         width: 100%;
         flex-direction: row;
     }
 
-    .welcome-container__content {
+    .welcome-content-container__content {
         width: 50%;
     }
 
-    .welcome-container__map-container {
+    .welcome-content-container__map-container {
         width: 50%;
     }
 
@@ -157,5 +185,7 @@
 
     .mission-container__mission-content {
         width: 50%;
+        padding: 0;
+        padding-left: 30px;
     }
 }
