--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -14,31 +14,40 @@
   --font-22: 22px;
   --font-26: 26px;
   --font-32: 32px;
-  --line-150: 150%; }
+  --font-44: 44px;
+  --line-120: 120%;
+  --line-150: 150%;
+}
 
 .mb-16 {
-  margin-bottom: 16px; }
+  margin-bottom: 16px;
+}
 
 .mb-45 {
-  margin-bottom: 45px; }
+  margin-bottom: 45px;
+}
 
 .navbar {
   width: 100%;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .navbar-mobile {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 16px; }
+  padding: 16px;
+}
 
 .navbar-mobile__logo-container {
-  height: 45px; }
+  height: 45px;
+}
 
 .navbar-mobile__menu {
-  display: none; }
+  display: none;
+}
 
 .navbar-desktop {
   display: none;
@@ -46,10 +55,12 @@
   align-items: center;
   max-width: 1280px;
   padding-top: 18px;
-  padding-bottom: 18px; }
+  padding-bottom: 18px;
+}
 
 .navbar-desktop__logo-container {
-  height: 45px; }
+  height: 45px;
+}
 
 .call-btn {
   display: flex;
@@ -57,42 +68,55 @@
   align-items: center;
   background-color: var(--color-red);
   padding: 8px 16px;
-  margin-left: 16px; }
+  margin-left: 16px;
+}
 
 .call-btn--mobile {
-  display: none; }
+  display: none;
+}
 
 .call-btn__phone-img {
-  height: 24px; }
+  height: 24px;
+}
 
 .call-btn__text {
   font-size: var(--font-22);
   font-weight: bold;
   color: var(--color-white);
-  margin-left: 10px; }
+  margin-left: 10px;
+}
 
 .navbar__navbar-links {
   display: flex;
-  margin-left: 16px; }
+  margin-left: 16px;
+}
 
 .navbar-links__navbar-link {
   font-size: var(--font-16);
   color: var(--color-button);
   text-decoration: underline;
-  padding-right: 16px; }
+  padding-right: 16px;
+}
 
 @media only screen and (min-width: 768px) {
   .call-btn--mobile {
-    display: block; } }
+    display: block;
+  }
+}
 @media only screen and (min-width: 1024px) {
   .navbar-mobile {
-    display: none; }
+    display: none;
+  }
 
   .navbar-desktop {
-    display: flex; } }
+    display: flex;
+  }
+}
 @media only screen and (min-width: 1280px) {
   .navbar-links__navbar-link {
     font-size: var(--font-22);
-    padding-right: 40px; } }
+    padding-right: 40px;
+  }
+}
 
 /*# sourceMappingURL=NavBar.css.map */
