--- a/src/css/placeholders.scss
+++ b/src/css/placeholders.scss
@@ -17,7 +17,9 @@
     --font-22: 22px;
     --font-26: 26px;
     --font-32: 32px;
+    --font-44: 44px;
     // Line heights
+    --line-120: 120%;
     --line-150: 150%;
 }
 
