--- a/src/css/ReservationForm.css
+++ b/src/css/ReservationForm.css
@@ -2,8 +2,24 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  position: relative;
   padding: 16px;
   background-color: var(--color-white);
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
+}
+
+.reservation-form__triangle {
+  display: none;
+  position: absolute;
+  right: -49px;
+  bottom: 40px;
+  height: 0;
+  width: 0;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-left: 25px solid var(--color-white);
+  background-color: transparent;
 }
 
 .reservation-form__input {
@@ -40,6 +56,10 @@
   .reservation-form {
     width: 425px;
     padding: 40px;
+  }
+
+  .reservation-form__triangle {
+    display: block;
   }
 }
 
