Work on NavBar: change display flex to display grid; work on Footer: make phone and email clickable.

--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -146,10 +146,10 @@
         // margin-left: 50px;
     }
 
-    .home__home-content {
-        // width: 80%;
-        // padding-top: 50px;
-    }
+    // .home__home-content {
+    //     width: 80%;
+    //     padding-top: 50px;
+    // }
 
     .home-content__welcome-container {
         width: 85%;
