--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -51,11 +51,18 @@
 
 .navbar-desktop {
   display: none;
-  flex-direction: row;
-  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 5em;
   max-width: 1280px;
   padding-top: 18px;
   padding-bottom: 18px;
+}
+
+.navbar-desktop__navbar-desktop-left {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar-desktop__logo-container {
@@ -84,11 +91,12 @@
   font-weight: bold;
   color: var(--color-white);
   margin-left: 10px;
+  white-space: nowrap;
 }
 
 .navbar__navbar-links {
   display: flex;
-  margin-left: 16px;
+  align-items: center;
 }
 
 .navbar-links__navbar-link {
@@ -96,6 +104,7 @@
   color: var(--color-button);
   text-decoration: underline;
   padding-right: 16px;
+  white-space: nowrap;
 }
 
 @media only screen and (min-width: 768px) {
@@ -109,7 +118,7 @@
   }
 
   .navbar-desktop {
-    display: flex;
+    display: grid;
   }
 }
 @media only screen and (min-width: 1280px) {
