--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,8 @@
+a {
+  color: inherit;
+}
+
+/* Original reset file */
 *,
 *::before,
 *::after {
@@ -429,11 +434,18 @@ body, p {
 
 .navbar-desktop {
   display: none;
-  flex-direction: row;
-  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 5em;
   max-width: 1280px;
   padding-top: 18px;
   padding-bottom: 18px;
+}
+
+.navbar-desktop__navbar-desktop-left {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar-desktop__logo-container {
@@ -462,11 +474,12 @@ body, p {
   font-weight: bold;
   color: var(--color-white);
   margin-left: 10px;
+  white-space: nowrap;
 }
 
 .navbar__navbar-links {
   display: flex;
-  margin-left: 16px;
+  align-items: center;
 }
 
 .navbar-links__navbar-link {
@@ -474,6 +487,7 @@ body, p {
   color: var(--color-button);
   text-decoration: underline;
   padding-right: 16px;
+  white-space: nowrap;
 }
 
 @media only screen and (min-width: 768px) {
@@ -487,7 +501,7 @@ body, p {
   }
 
   .navbar-desktop {
-    display: flex;
+    display: grid;
   }
 }
 @media only screen and (min-width: 1280px) {
