Move top bg image container to Top component.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,5 +3,7 @@
 @import 'placeholders';
 @import 'Home';
 @import 'NavBar';
+@import 'Top';
 @import 'ReservationForm';
+@import 'Mission';
 @import 'Footer';
